Adds commented out sections to be able to add cards later on.

--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,7 @@
 <!-- Footer -->
 <footer id="footer">
     Created by Yehya Eldeeb.
+    <!--<input type="file" name="file" id="file">-->
 </footer>
 
 <script>
