--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,10 @@
 <html>
 <title>Cards Against Humanity</title>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="style.css">
 <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="fa_style.css">
-<link rel="stylesheet" type="text/css" href="style.css">
 <body>
 
 <!-- Navbar -->
@@ -41,7 +40,7 @@
         <div class="row padding-32 white">
             <div class="third">
                 <p><b>Step 1</b><br><br>
-                    Judge: Wait.<br>
+                    Judge: Pick a black card.<br>
                     Player: Choose a funny white card to the black card given.</p>
             </div>
             <div class="third">
@@ -51,7 +50,7 @@
             </div>
             <div class="third">
                 <p><b>Step 3</b><br>
-                    <img src="images/strong.jpg" class="round" alt="Random Name" style="width:60%"><br>
+                    <img src="images/strong.jpg" alt="Picture of a strong man." style="width:60%"><br>
                     Laugh at your sorry friends and bask in the glory!</p>
             </div>
         </div>
